# wmde-start-menu

./: Cargo.toml  PKGBUILD  README.md  justfile  package.nix
applet/: Cargo.toml
applet/i18n/ar/: wmde_start_menu_applet.ftl
applet/i18n/cs/: cosmic_ext_classic_menu_applet.ftl  wmde_start_menu_applet.ftl
applet/i18n/de/: wmde_start_menu_applet.ftl
applet/i18n/es/: wmde_start_menu_applet.ftl
applet/i18n/es-419/: wmde_start_menu_applet.ftl
applet/i18n/fa/: wmde_start_menu_applet.ftl
applet/i18n/fr/: wmde_start_menu_applet.ftl
applet/i18n/hi/: wmde_start_menu_applet.ftl
applet/i18n/hu/: wmde_start_menu_applet.ftl
applet/i18n/it/: wmde_start_menu_applet.ftl
applet/i18n/ja/: wmde_start_menu_applet.ftl
applet/i18n/kn/: wmde_start_menu_applet.ftl
applet/i18n/ko/: wmde_start_menu_applet.ftl
applet/i18n/pl/: wmde_start_menu_applet.ftl
applet/i18n/pt/: wmde_start_menu_applet.ftl
applet/i18n/ru/: wmde_start_menu_applet.ftl
applet/i18n/sk/: wmde_start_menu_applet.ftl
applet/i18n/sr-Cyrl/: wmde_start_menu_applet.ftl
applet/i18n/sr-Latn/: wmde_start_menu_applet.ftl
applet/i18n/sv/: wmde_start_menu_applet.ftl
applet/i18n/tr/: wmde_start_menu_applet.ftl
applet/i18n/uk/: wmde_start_menu_applet.ftl
applet/i18n/zh-CN/: wmde_start_menu_applet.ftl
applet/i18n/zh-TW/: wmde_start_menu_applet.ftl
applet/src/: applet.rs  applet_button.rs  applet_menu.rs  config.rs  cosmic_session.rs  main.rs
applet/src/dbus/: interface.rs  mod.rs
applet/src/logic/: apps.rs
applet/src/model/: system_tool.rs
applet/src/widgets/: virtualized_app_list.rs
flatpak/: com.championpeak87.cosmic-ext-classic-menu.json
res/: com.championpeak87.cosmic-ext-classic-menu.desktop  com.championpeak87.cosmic-ext-classic-menu.metainfo.xml  fun.wmde.start-menu.desktop  fun.wmde.start-menu.metainfo.xml  packaging.just
settings/: Cargo.toml
settings/i18n/ar/: wmde_start_menu_settings.ftl
settings/i18n/cs/: wmde_start_menu_settings.ftl
settings/i18n/de/: wmde_start_menu_settings.ftl
settings/i18n/en/: wmde_start_menu_settings.ftl
settings/i18n/es/: wmde_start_menu_settings.ftl
settings/i18n/es-419/: wmde_start_menu_settings.ftl
settings/i18n/fa/: wmde_start_menu_settings.ftl
settings/i18n/fr/: wmde_start_menu_settings.ftl
settings/i18n/hi/: wmde_start_menu_settings.ftl
settings/i18n/hu/: wmde_start_menu_settings.ftl
settings/i18n/it/: wmde_start_menu_settings.ftl
settings/i18n/ja/: wmde_start_menu_settings.ftl
settings/i18n/kn/: wmde_start_menu_settings.ftl
settings/i18n/ko/: wmde_start_menu_settings.ftl
settings/i18n/pl/: wmde_start_menu_settings.ftl
settings/i18n/pt/: wmde_start_menu_settings.ftl
settings/i18n/pt-BR/: wmde_start_menu_settings.ftl
settings/i18n/ru/: wmde_start_menu_settings.ftl
settings/i18n/sk/: wmde_start_menu_settings.ftl
settings/i18n/sr-Cyrl/: wmde_start_menu_settings.ftl
settings/i18n/sr-Latn/: wmde_start_menu_settings.ftl
settings/i18n/sv/: wmde_start_menu_settings.ftl
settings/i18n/tr/: wmde_start_menu_settings.ftl
settings/i18n/uk/: wmde_start_menu_settings.ftl
settings/i18n/zh-CN/: wmde_start_menu_settings.ftl
settings/i18n/zh-TW/: wmde_start_menu_settings.ftl
settings/src/: app.rs  main.rs
