[package]
name = "wmde-start-menu-applet"
version = "0.0.14"
edition = "2024"
authors = ["Kamil Lihan <k.lihan@outlook.com>"]
license = "GPL-3.0-only"
description = "A launcher applet for COSMIC™ Desktop"
repository = "https://github.com/Lin-WMDE/start-menu"
homepage = "https://wmde.fun"

[dependencies]
i18n-embed-fl = { workspace = true }
open = { workspace = true }
rust-embed = { workspace = true }
fuzzy-matcher = "0.3.7"
zbus = "5.7.1"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
serde = { workspace = true, features = ["derive"] }
rustix = "1.0.5"
logind-zbus = "5.3.2"
once_cell = "1.21.3"
users = { workspace = true }
accounts-zbus = { git = "https://github.com/pop-os/dbus-settings-bindings" }
notify = "*"
simple_logger = { workspace = true }
log = { workspace = true }
cosmic-settings-config = { git = "https://github.com/pop-os/cosmic-settings-daemon" }
cosmic-app-list-config = { git = "https://github.com/pop-os/cosmic-applets" }
unicode-normalization = "0.1.25"
cached = "0.56.0"
futures = "0.3"
i18n-embed = { workspace = true, features = ["fluent-system", "desktop-requester"] }

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["applet", "tokio", "wayland", "desktop", "a11y"]


# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
