[package]
name = "wmde-start-menu-settings"
version = "0.0.14"
edition = "2024"
authors = ["Kamil Lihan <k.lihan@outlook.com>"]
license = "GPL-3.0-only"
description = "A launcher applet for COSMIC Desktop"
repository = "https://github.com/Lin-WMDE/start-menu"
homepage = "https://wmde.fun"

[build-dependencies]
vergen = { version = "8", features = ["git", "gitcl"] }
walkdir = "2.3.2"

[dependencies]
futures-util = "0.3.31"
i18n-embed-fl = { workspace = true }
open = { workspace = true }
rust-embed = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
wmde-start-menu-applet = { path = "../applet" }
simple_logger = { workspace = true }
log = { workspace = true }
i18n-embed = { workspace = true, features = ["fluent-system", "desktop-requester"] }

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
features = [
    # About dialog support
    "about",
    # Accessibility support
    "a11y",
    # Uses cosmic-settings-daemon to watch for config file changes
    "dbus-config",
    # Support for file dialogs
    "xdg-portal",
    # Support creating additional application windows.
    "multi-window",
    # On app startup, focuses an existing instance if the app is already open
    "single-instance",
    # Uses tokio as the executor for the runtime
    "tokio",
    # Windowing support for X11, Windows, Mac, & Redox
    "winit",
    # Add Wayland support to winit
    "wayland",
    # GPU-accelerated rendering
    "wgpu",
]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
